fix: scroll to top button z-index

--- a/byteForge/src/styles/common/scrollToTop.scss
+++ b/byteForge/src/styles/common/scrollToTop.scss
@@ -5,6 +5,7 @@
     position: fixed;
     top: 85%;
     right: 2rem;
+    z-index: 50;
 
     @include m.flexCenter;
 
